--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,6 +6,8 @@ jobs:
       fail-fast: false
       matrix:
         include:
+          - ruby: 3.3
+            gemfile: Gemfile
           - ruby: 3.2
             gemfile: Gemfile
           - ruby: 3.1
@@ -18,7 +20,7 @@ jobs:
     env:
       BUNDLE_GEMFILE: ${{ matrix.gemfile }}
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - uses: ruby/setup-ruby@v1
         with:
           ruby-version: ${{ matrix.ruby }}
